force-app/main/default/objects/Firm_Review__c/Firm_Review__c.object-meta.xml
<CustomObject>
    <label>Firm Review</label>
    <nameField>
        <label>Firm Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firm Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>