force-app/main/default/objects/Firm_Review__c/fields/Award_year__c.field-meta.xml
<CustomField>
    <fullName>Award_year__c</fullName>
    <label>Award year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>