force-app/main/default/objects/Firm_Review__c/fields/Core_Market__c.field-meta.xml
<CustomField>
    <fullName>Core_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Firm Reviews</relationshipLabel>
    <relationshipName>Firm_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>