force-app/main/default/objects/Firm_Review__c/fields/Firm_Review_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Firm_Review_Deadline__c</fullName>
    <label>Firm Review Deadline</label>
    <type>Date</type>
</CustomField>