force-app/main/default/objects/Firm_Review__c/fields/Firm_Review_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Review_Sent_Date__c</fullName>
    <label>Firm Review Sent Date</label>
    <type>Date</type>
</CustomField>