force-app/main/default/objects/Firm_Review__c/fields/Firm_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Review_Type__c</fullName>
    <label>Firm Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>