force-app/main/default/objects/Firm_Review__c/fields/Last_contact_attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_contact_attempt__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last contact attempt</label>
    <type>Date</type>
</CustomField>