force-app/main/default/objects/Firm_Review__c/fields/Market_area__c.field-meta.xml
<CustomField>
    <fullName>Market_area__c</fullName>
    <label>Market area</label>
    <length>250</length>
    <type>Text</type>
</CustomField>