force-app/main/default/objects/Firm_Review__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Firm Reviews</relationshipLabel>
    <relationshipName>Firm_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>