force-app/main/default/objects/Firm_Review__c/fields/Primary_contact_email_del_del__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact_email_del_del__c</fullName>
    <label>Primary contact email</label>
    <type>Email</type>
</CustomField>