force-app/main/default/objects/Firm_Review__c/fields/Primary_contact_last_name__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact_last_name__c</fullName>
    <label>Primary contact last name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>