force-app/main/default/objects/Firm_Review__c/fields/Primary_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact_phone__c</fullName>
    <label>Primary contact phone</label>
    <type>Phone</type>
</CustomField>