force-app/main/default/objects/Firm_Review__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <label>Publication</label>
    <length>250</length>
    <type>Text</type>
</CustomField>