force-app/main/default/objects/Firm_Review__c/fields/Secondary_contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Firm Reviews (Secondary contact)</relationshipLabel>
    <relationshipName>Firm_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>