force-app/main/default/objects/Firm_Review__c/fields/Secondary_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_contact_email__c</fullName>
    <label>Secondary contact email</label>
    <type>Email</type>
</CustomField>