force-app/main/default/objects/Firm_Review__c/fields/Secondary_contact_first_name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_contact_first_name__c</fullName>
    <label>Secondary contact first name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>