force-app/main/default/objects/Firm_Review__c/fields/Secondary_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_contact_phone__c</fullName>
    <label>Secondary contact phone</label>
    <type>Phone</type>
</CustomField>