force-app/main/default/objects/Firm_Review__c/fields/Tertiary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Firm Reviews (Tertiary Contact)</relationshipLabel>
    <relationshipName>Firm_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>