force-app/main/default/objects/Firm_Review__c/fields/Tertiary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Contact_Email__c</fullName>
    <label>Tertiary Contact Email</label>
    <type>Email</type>
</CustomField>