force-app/main/default/objects/Firm_Review__c/fields/Tertiary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Contact_First_Name__c</fullName>
    <label>Tertiary Contact First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>