force-app/main/default/objects/Firm_Review__c/fields/Tertiary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Contact_Phone__c</fullName>
    <label>Tertiary Contact Phone</label>
    <type>Phone</type>
</CustomField>