force-app/main/default/objects/Firm_Review__c/recordTypes/Major_Firm_Review.recordType-meta.xml
<RecordType>
    <fullName>Major_Firm_Review</fullName>
    <active>true</active>
    <label>Major Firm Review</label>
</RecordType>