force-app/main/default/objects/Firm_Review__c/recordTypes/Minor_Firm_Review.recordType-meta.xml
<RecordType>
    <fullName>Minor_Firm_Review</fullName>
    <active>true</active>
    <label>Minor Firm Review</label>
</RecordType>